deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hugo
  labels:
    app.kubernetes.io/part-of: hugo
